update add orderitem to order

--- a/waiter/menu.html
+++ b/waiter/menu.html
@@ -71,10 +71,23 @@
         </div>
     </template>
 
+
     <template id="cartSidebarTemplate">
         <div class="cart-sidebar">
             <div class="cart-header">
-                <div class="order-type-section">
+                <!-- Banner thông báo khi đang trong chế độ thêm món -->
+                <div class="add-items-banner" id="addItemsBanner" style="display: none;">
+                    <div class="banner-content">
+                        <span class="banner-icon">🍽️</span>
+                        <span class="banner-text">Order #<span
+                                id="currentOrderId"></span></span>
+                        <button class="btn btn-cancel-add-items" onclick="cancelAddItemsMode()">
+                            Hủy
+                        </button>
+                    </div>
+                </div>
+
+                <div class="order-type-section" id="orderTypeSection">
                     <div class="order-type-options">
                         <div class="order-type-option" onclick="selectOrderType('DINE_IN', this)">
                             <div class="order-type-checkbox"></div>
@@ -95,7 +108,7 @@
                 <div class="table-selection" id="tableSelection" style="display: none;">
                     <div class="table-dropdown">
                         <button class="table-select-btn" onclick="toggleTableDropdown()">
-                            <span class="selected-table ">Chọn bàn</span>
+                            <span class="selected-table">Chọn bàn</span>
                             <span class="arrow">▼</span>
                         </button>
                         <div class="table-dropdown-menu" id="tableDropdownMenu">
@@ -125,43 +138,16 @@
                 </div>
             </div>
 
-
             <!-- Cart Footer -->
             <div class="cart-footer">
                 <div class="total-section">
                     <div class="total-label">Tổng cộng:</div>
                     <div class="total-amount" id="totalAmount">0₫</div>
                 </div>
-                <button class="checkout-btn" onclick="submitOrder()">Đặt món ngay</button>
+                <button class="checkout-btn" onclick="handleCheckout()">
+                    <span id="checkoutBtnText">Đặt món ngay</span>
+                </button>
             </div>
-        </div>
-    </template>
-
-    <!-- Template cho cart item -->
-    <template id="cartItemTemplate">
-        <div class="cart-item" data-item-id="[ITEM_ID]">
-            <div class="item-icon">[ICON]</div>
-            <div class="item-details">
-                <div class="item-name">[NAME]</div>
-                <div class="item-price">[PRICE]₫</div>
-                <div class="item-note" style="display: none;">Ghi chú: [NOTE]</div>
-            </div>
-            <div class="item-controls">
-                <button class="remove-item-btn" onclick="removeItem(this)">×</button>
-                <div class="quantity-controls">
-                    <button class="quantity-btn decrease" onclick="decreaseQuantity(this)">-</button>
-                    <span class="quantity-display">[QUANTITY]</span>
-                    <button class="quantity-btn increase" onclick="increaseQuantity(this)">+</button>
-                </div>
-            </div>
-        </div>
-    </template>
-
-    <!-- Template cho empty cart -->
-    <template id="emptyCartTemplate">
-        <div class="empty-cart">
-            <div class="empty-cart-icon">🛒</div>
-            <p class="empty-cart-text">Giỏ hàng của bạn đang trống</p>
         </div>
     </template>
 </body>
