--- a/home-page/html/register.html
+++ b/home-page/html/register.html
@@ -95,8 +95,8 @@
         }
 
         .logo-icon {
-            width: 48px;
-            height: 48px;
+            width: 80px;
+            height: 80px;
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border-radius: var(--border-radius);
             display: flex;
@@ -108,15 +108,15 @@
         }
 
         .logo-text {
-            font-family: 'Poppins', sans-serif;
-            font-size: 28px;
+            font-family: 'Pacifico', cursive;
+            font-size: 80px;
             font-weight: 700;
             color: var(--primary-color);
             margin: 0;
         }
 
         .brand-content h1 {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             font-size: 42px;
             font-weight: 700;
             color: var(--primary-color);
@@ -181,7 +181,7 @@
         }
 
         .section-title {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             color: var(--primary-color);
             font-size: 32px;
             font-weight: 700;
@@ -524,9 +524,7 @@
         <!-- Phần thương hiệu -->
         <div class="brand-section">
             <div class="logo">
-                <div class="logo-icon">
-                    <i class="bi bi-shop"></i>
-                </div>
+                
                 <h2 class="logo-text">FoodHub</h2>
             </div>
             <div class="brand-content">
@@ -558,8 +556,6 @@
             
             <div id="alert-message"></div>
 
-            <h2 class="section-title" id="form-title">Tạo tài khoản mới</h2>
-<p class="section-subtitle" id="form-subtitle">Vui lòng nhập đầy đủ thông tin để bắt đầu</p>
 
 <form id="register-form" class="d-block form-transition" novalidate>
     <div class="form-group">
