--- a/home-page/html/login.html
+++ b/home-page/html/login.html
@@ -155,14 +155,14 @@
     }
 
     .brand-name {
-      font-family: 'Playfair Display', serif;
-      font-size: 1.8rem;
+      font-family: 'Pacifico', cursive;
+      font-size: 4rem;
       font-weight: 700;
       color: var(--primary-gold);
     }
 
     .intro-section h2 {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-size: 2.5rem;
       font-weight: 700;
       color: white;
@@ -583,7 +583,6 @@
     <div class="login-wrapper">
       <div class="intro-section">
         <div class="brand-logo">
-          <div class="logo-icon">F</div>
           <div class="brand-name">FoodHub</div>
         </div>
         <h2>Chào mừng trở lại!</h2>
