update order and menu of waiter dashboard

--- a/waiter/menu.html
+++ b/waiter/menu.html
@@ -79,8 +79,7 @@
                 <div class="add-items-banner" id="addItemsBanner" style="display: none;">
                     <div class="banner-content">
                         <span class="banner-icon">🍽️</span>
-                        <span class="banner-text">Order #<span
-                                id="currentOrderId"></span></span>
+                        <span class="banner-text">Order #<span id="currentOrderId"></span></span>
                         <button class="btn btn-cancel-add-items" onclick="cancelAddItemsMode()">
                             Hủy
                         </button>
@@ -152,22 +151,22 @@
     </template>
 
     <template id="confirmationPopupTemplate">
-    <div id="confirmationPopup" class="confirmation-popup-overlay">
-        <div class="confirmation-popup">
-            <div class="popup-header">
-                <h3 class="popup-title"></h3>
-                <button class="popup-close-btn" onclick="closeConfirmationPopup()">×</button>
-            </div>
-            <div class="popup-content">
-                <p class="popup-message"></p>
-            </div>
-            <div class="popup-actions">
-                <button class="popup-btn cancel-btn" onclick="closeConfirmationPopup()"></button>
-                <button class="popup-btn confirm-btn" id="confirmActionBtn"></button>
+        <div id="confirmationPopup" class="confirmation-popup-overlay">
+            <div class="confirmation-popup">
+                <div class="popup-header">
+                    <h3 class="popup-title"></h3>
+                    <button class="popup-close-btn" onclick="closeConfirmationPopup()">×</button>
+                </div>
+                <div class="popup-content">
+                    <p class="popup-message"></p>
+                </div>
+                <div class="popup-actions">
+                    <button class="popup-btn cancel-btn" onclick="closeConfirmationPopup()"></button>
+                    <button class="popup-btn confirm-btn" id="confirmActionBtn"></button>
+                </div>
             </div>
         </div>
-    </div>
-</template>
+    </template>
 </body>
 
 </html>
