--- a/payment/result.html
+++ b/payment/result.html
@@ -32,7 +32,7 @@
         <h1>Kết quả thanh toán</h1>
         <p id="payment-message"></p>
         <div id="loading">Đang tải...</div>
-        <a href="/">Quay lại trang chính</a>
+        <a href="../home-page/html/checkout.html">Quay lại trang chính</a>
     </div>
 
     <script>
